--- a/wcus.css
+++ b/wcus.css
@@ -87,6 +87,16 @@ button:focus-visible,
 	background-color: #fed7ed;
 }
 
+/*
+ * Fix the spacing inside group blocks on contact forms.
+ * We can't set the Block Spacing value on the blocks themselves because it
+ * breaks the form validation.
+ */
+
+.wp-block-jetpack-contact-form .wp-block-group > * + * {
+	margin-block-start: 0.5em;
+}
+
 #tix-attendees ul {
 		padding: 0;
 	}
